<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_20"
            android:paddingRight="@dimen/size_20">

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/txt_program_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_5"
                android:paddingRight="@dimen/size_5"
                android:paddingTop="@dimen/size_5"
                android:text="@string/label_tag_program_code"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_15" />

            <org.ekstep.genie.customview.EkStepCustomEditText
                android:id="@+id/edt_tag_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_tag_type_here"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/txt_size_15"
                android:theme="@style/EkStepEditTextTheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/size_5"
                android:background="@color/color_grey" />

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/txt_tag_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:paddingBottom="@dimen/size_5"
                android:paddingRight="@dimen/size_5"
                android:paddingTop="@dimen/spacing_normal"
                android:text="@string/label_tag_short_desc"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_15" />

            <org.ekstep.genie.customview.EkStepCustomEditText
                android:id="@+id/edt_tag_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_tag_type_here"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/txt_size_15"
                android:theme="@style/EkStepEditTextTheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/size_5"
                android:background="@color/color_grey" />

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:paddingBottom="@dimen/size_5"
                android:paddingRight="@dimen/size_5"
                android:paddingTop="@dimen/spacing_normal"
                android:text="@string/label_tag_event_sched"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_30"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <org.ekstep.genie.customview.EkStepCustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawablePadding="@dimen/spacing_small"
                        android:gravity="center_vertical"
                        android:paddingBottom="@dimen/size_5"
                        android:paddingTop="@dimen/size_5"
                        android:text="@string/label_tag_start_date"
                        android:textColor="@color/profile_background"
                        android:textSize="@dimen/txt_size_15" />

                    <RelativeLayout
                        android:id="@+id/layout_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_tiny">

                        <org.ekstep.genie.customview.EkStepCustomTextView
                            android:id="@+id/txt_start_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_5"
                            android:layout_marginRight="@dimen/size_5"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/txt_size_15" />

                        <View
                            android:layout_width="200dp"
                            android:layout_height="1dp"
                            android:layout_below="@id/txt_start_date"
                            android:layout_marginTop="@dimen/spacing_tiny"
                            android:background="@color/color_grey" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_30"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <org.ekstep.genie.customview.EkStepCustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawablePadding="@dimen/spacing_small"
                        android:gravity="center_vertical"
                        android:paddingBottom="@dimen/size_5"
                        android:paddingTop="@dimen/size_5"
                        android:text="@string/label_tag_end_date"
                        android:textColor="@color/profile_background"
                        android:textSize="@dimen/txt_size_15" />

                    <RelativeLayout
                        android:id="@+id/layout_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_tiny">

                        <org.ekstep.genie.customview.EkStepCustomTextView
                            android:id="@+id/txt_end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_5"
                            android:layout_marginRight="@dimen/size_5"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/txt_size_15" />

                        <View
                            android:layout_width="200dp"
                            android:layout_height="1dp"
                            android:layout_below="@id/txt_end_date"
                            android:layout_marginTop="@dimen/spacing_tiny"
                            android:background="@color/color_grey" />
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/layout_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/bg_blue_rounded_selector"
                android:includeFontPadding="false"
                android:paddingLeft="@dimen/size_25"
                android:paddingRight="@dimen/size_25"
                android:text="@string/action_tag_save"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_15" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>