...
    <!-- Menu Items String Begin-->
    <string name="label_nav_home">Home</string>
    <string name="label_nav_transfer">Transfer</string>
    <string name="label_nav_library">Library</string>
    <string name="label_nav_downloads">Downloads</string>
    <string name="label_nav_children">@string/title_children</string>
    <string name="label_nav_settings">Settings</string>
    <string name="label_nav_share_genie">Share Genie</string>
    <string name="label_nav_notifications">Notifications</string>
    <!--Menu Items String End-->

    <!-- Home  String Begin-->
    <string name="title_home_sync_genie_data">Sync Genie Data</string>
...
    <string name="label_about_privacy_policy">Privacy Policy</string>
    <string name="label_about_us">About us</string>
    <string name="label_about_tos">Terms of Service</string>
    <!--About String End-->

    <!-- Advanced Setting/Tag String Begin-->
    <string name="title_advanced_settings">Advanced Settings</string>
    <string name="title_tag_add_new">Add new Tag</string>
    <string name="title_tag_program">Program Tags</string>
    <string name="label_tag_program_code">Program code/Tag</string>
    <string name="label_tag_short_desc">Short Description</string>
    <string name="label_tag_event_sched">Event Schedule</string>
    <string name="label_tag_start_date">Start Date</string>
    <string name="label_tag_end_date">End Date</string>
    <string name="msg_tag_added_sussessfully">Tag added successfully</string>
    <string name="msg_tag_updated_successfully">Tag updated successfully</string>
    <string name="msg_tag_not_available">No program tags yet</string>
    <string name="msg_tag_onboarding">Click on \"+\" to start adding tags&#8230;</string>
    <string name="action_tag_save">Save</string>
    <string name="action_tag_done">Done</string>
    <string name="hint_tag_type_here">Type here&#8230;</string>
    <string name="error_tag_cant_be_empty">Program code can\'t be empty</string>
    <string name="error_tag_should_be_alpha_numeric">Program code should be alphanumeric</string>
    <string name="error_tag_duplicate">Program code already exists</string>
    <string name="error_tag_limit">Program code should be of 6 to 12 characters</string>
    <string name="error_tag_desc_empty">Program description can\'t be empty</string>
    <string name="error_tag_start_date_empty">Start date can\'t be empty</string>
    <string name="error_tag_end_date_empty">End date can\'t be empty</string>
    <string name="error_tag_inavlid">Invalid Tag</string>
    <string name="error_tag_invalid_date_range">Invalid date range</string>
    <!--Advanced Setting/Tag String End-->


    <!-- Storage settings String Begin-->
    <string name="title_storage_settings">Storage Settings</string>
    <string name="title_mobile_device">Device</string>
...
