...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_btn"
                style="@style/MenuBackButtonStyle" />

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/txt_header"
                style="@style/HeaderTextStyle"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/back_btn"
                android:text="@string/label_nav_settings" />


...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_advanced_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5"
                    android:layout_weight="1"
                    android:background="?settingsTileBackground"
                    android:clickable="true"
...
